[Update] Change to JAVA15 standard
- 撒比赛组